--- a/lib/SOOT/Examples/Images.pod
+++ b/lib/SOOT/Examples/Images.pod
@@ -32,7 +32,7 @@ This is a listing of all SOOT examples for Images.
   } else {
     $gal = TFile::Open("http://root.cern.ch/files/$file");
   }
-  my $img = $gal->Get("n4254")->as('TImage'); # FIXME maybe override some TFile/similar methods to return objects of the true type as opposed to returning TObjects?
+  my $img = $gal->Get("n4254");
   $img->Draw();
   
   # open the color editor
