--- a/Changes
+++ b/Changes
@@ -1,5 +1,19 @@
 Revision history for Perl extension SOOT.
 
+0.16  Wed Aug 10 18:00 2011
+* New features:
+  - Additional interface for TClass to make method-related information
+    such as "which methods of this object start with Foo?" and full
+    method prototypes available conveniently to Perl. To be used by
+    SOOT::App autocompletion.
+  - Some operations (such as filling histograms) are faster because
+    they were explicitly wrapped instead of relying on the slow
+    dynamic wrapping.
+  - More examples.
+
+* Maintenance:
+  - Upgraded all the bundled build tools.
+
 0.15  Tue Jul 26 18:40 2011
 * Bug fixes:
   - 0.14 was missing files.
