--- a/lib/SOOT/Examples/Hist.pod
+++ b/lib/SOOT/Examples/Hist.pod
@@ -453,6 +453,76 @@ This is a listing of all SOOT examples for Hist.
 
 
 
+=head2 fillrandom.pl
+
+  #!/usr/bin/env perl
+  use strict;
+  use warnings;
+  use SOOT qw/:all/;
+  
+  fillrandom();
+  $gApplication->Run();
+  
+  sub fillrandom {
+    #Fill a 1-D histogram from a parametric function
+    # To see the output of this macro, click begin_html <a href="gif/fillrandom.gif">here</a>. end_html
+    #Author: Rene Brun
+     
+    my $c1 = TCanvas->new("c1","The FillRandom example",200,10,700,900)->keep;
+    $c1->SetFillColor(18);
+  
+    my $pad1 = TPad->new("pad1","The pad with the function",0.05,0.50,0.95,0.95,21.)->keep;
+    my $pad2 = TPad->new("pad2","The pad with the histogram",0.05,0.05,0.95,0.45,21.)->keep;
+    $pad1->Draw();
+    $pad2->Draw();
+    $pad1->cd();
+  
+    $gBenchmark->Start("fillrandom");
+    #
+    # A function (any dimension) or a formula may reference
+    # an already defined formula
+    #
+    my $form1 = TFormula->new("form1","abs(sin(x)/x)")->keep;
+    my $sqroot = TF1->new("sqroot","x*gaus(0) + [3]*form1",0,10)->keep;
+    $sqroot->SetParameters(10,4,1,20);
+    $pad1->SetGridx();
+    $pad1->SetGridy();
+    $pad1->GetFrame()->SetFillColor(42);
+    $pad1->GetFrame()->SetBorderMode(-1);
+    $pad1->GetFrame()->SetBorderSize(5);
+    $sqroot->SetLineColor(4);
+    $sqroot->SetLineWidth(6);
+    $sqroot->Draw();
+    my $lfunction = TPaveLabel->new(5,39,9.8,46,"The sqroot function")->keep;
+    $lfunction->SetFillColor(41);
+    $lfunction->Draw();
+    $c1->Update();
+  
+    #
+    # Create a one dimensional histogram (one float per bin)
+    # and fill it following the distribution in function sqroot.
+    #
+    $pad2->cd();
+    $pad2->GetFrame()->SetFillColor(42);
+    $pad2->GetFrame()->SetBorderMode(-1);
+    $pad2->GetFrame()->SetBorderSize(5);
+    my $h1f = TH1F->new("h1f","Test random numbers",200,0,10)->keep;
+    $h1f->SetFillColor(45);
+    $h1f->FillRandom("sqroot",10000);
+    $h1f->Draw();
+    $c1->Update();
+    #
+    # Open a ROOT file and save the formula, function and histogram
+    #
+    my $myfile = TFile->new("fillrandom.root","RECREATE");
+    $form1->Write();
+    $sqroot->Write();
+    $h1f->Write();
+    $gBenchmark->Show("fillrandom");
+  }
+
+
+
 =head2 hksimple.pl
 
   use strict;
@@ -598,6 +668,80 @@ This is a listing of all SOOT examples for Hist.
   
   $gApplication->Run;
   
+
+
+
+=head2 hsum.pl
+
+  #!/usr/bin/env perl
+  use strict;
+  use warnings;
+  use SOOT qw/:all/;
+  
+  hsum();
+  $gApplication->Run();
+  
+  # histograms filled and drawn in a loop
+  use constant kUPDATE => 500;
+  sub hsum {
+  #
+  # To see the output of this macro, click begin_html <a href="gif/hsum.gif" >here</a> end_html
+  #    Simple example illustrating how to use the C++ interpreter	
+  #    to fill histograms in a loop and show the graphics results
+  #Author: Rene Brun
+  
+    my $c1 = TCanvas->new("c1","The HSUM example",200,10,600,400)->keep;
+    $c1->SetGrid();
+  
+    $gBenchmark->Start("hsum");
+  
+    # Create some histograms.
+    my $total  = TH1F->new("total","This is the total distribution",100,-4,4)->keep;
+    my $main   = TH1F->new("main","Main contributor",100,-4,4)->keep;
+    my $s1     = TH1F->new("s1","This is the first signal",100,-4,4)->keep;
+    my $s2     = TH1F->new("s2","This is the second signal",100,-4,4)->keep;
+    $total->Sumw2(); # store the sum of squares of weights
+    $total->SetMarkerStyle(21);
+    $total->SetMarkerSize(0.7);
+    $main->SetFillColor(16);
+    $s1->SetFillColor(42);
+    $s2->SetFillColor(46);
+    my $slider;
+  
+    # Fill histograms randomly
+    $gRandom->SetSeed();
+    my ($xs1, $xs2, $xmain);
+    foreach my $i (0..9999) {
+       $xmain = $gRandom->Gaus(-1,1.5);
+       $xs1   = $gRandom->Gaus(-0.5,0.5);
+       $xs2   = $gRandom->Landau(1,0.15);
+       $main->Fill($xmain);
+       $s1->Fill($xs1, 0.3);
+       $s2->Fill($xs2, 0.2);
+       $total->Fill($xmain);
+       $total->Fill($xs1,0.3);
+       $total->Fill($xs2,0.2);
+       if ($i && ($i % kUPDATE()) == 0) {
+          if ($i == kUPDATE) {
+             $total->Draw("e1p");
+             $main->Draw("same");
+             $s1->Draw("same");
+             $s2->Draw("same");
+             $c1->Update();
+             $slider = TSlider->new("slider",
+                "test",4.2,0,4.6,$total->GetMaximum(),38);
+             $slider->SetFillColor(46);
+          }
+          $slider->SetRange(0., $i/10000.) if $slider;
+          $c1->Modified();
+          $c1->Update();
+       }
+    }
+    $slider->SetRange(0, 1);
+    $total->Draw("sameaxis");# to redraw axis hidden by the fill area
+    $c1->Modified();
+    $gBenchmark->Show("hsum");
+  }
 
 
 
